--- a/testapplication/src/main/res/layout/activity_main.xml
+++ b/testapplication/src/main/res/layout/activity_main.xml
@@ -2,7 +2,7 @@
 
 <fragment xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/map"
-    android:name="org.m0skit0.android.mapswrapper.SupportMapFragment"
+    android:name="com.google.android.gms.maps.SupportMapFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
